# ask-remote-llm-skill

./: README.md  SKILL.md  agent.py  command.md  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_bash.py  test_bridge_ssh.py  test_edit_file.py  test_find_files.py  test_git_diff.py  test_grep.py  test_list_directory.py  test_read_file.py  test_write_file.py
tools/: __init__.py  _context.py  bash.py  edit_file.py  find_files.py  git_diff.py  grep.py  list_directory.py  read_file.py  write_file.py
