[project]
name = "ask-foreign-llm-skill"
version = "0.1.0"
description = "Drive a remote LLM as an interactive agent with local tooling (bridge mode)"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
